<resources>
    <string name="app_name">EmailService</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server">Server</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_example">mymail@gmail.com</string>
    <string name="server_example">imap.gmail.com</string>
    <string name="password_example">mypassword</string>
    <string name="interval">Checks per hour</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="port">Port</string>
    <string name="port_example">993</string>
    <string name="interval_example">240</string>
</resources>
